--- a/package.json
+++ b/package.json
@@ -1,16 +1,22 @@
 {
   "dependencies": {
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.1.4",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "mongoose": "^7.2.3",
-    "otp-generator": "^4.0.1"
+    "mysql": "^2.18.1",
+    "mysql2": "^3.4.2",
+    "otp-generator": "^4.0.1",
+    "sequelize": "^6.32.1"
   },
   "name": "tytiong",
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
+    "config": "node config/db",
     "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon server.js"
@@ -20,6 +26,6 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "nodemon": "^2.0.22"
+    "nodemon": "^1.14.9"
   }
 }
